	accelerator-related ones. Also tidy up documentation a bit.

	* gtk/general/Structs.hsc: remove unneeded toolbar function.

	* gtk/selectors/ColorSelection.chs, gtk/selectors/FontSelection.chs
	gtk/selectors/ColorSelectionDialog.chs,
	gtk/selectors/FontSelectionDialog.chs, gtk/layout/Fixed.chs,
	gtk/misc/SizeGroup.chs, gtk/menuComboToolbar/ToolItem.chs: new modules

	* gtk/selectors/api.ignore: new api.ignore file

	* gtk/Makefile: add new directory 'selectors' to SUBDIRS.

	* gtk/general/Gtk.hs: export new modules

2004-08-1  Duncan Coutts <duncan@coutts.uklinux.net>

	* gtk/entry/SpinButton.chs, gtk/layout/Table.chs, gtk/layout/Layout.chs
	gtk/misc/Viewport.chs, gtk/misc/Tooltips.chs,
	gtk/scrolling/ScrolledWindow.chs, gtk/treeList/ListStore.chs,
	gtk/display/Label.chs, gtk/abstract/Misc.chs, gtk/abstract/Paned.chs,
	gtk/abstract/Range.chs, gtk/abstract/Scale.chs: add missing functions.
	Also fix a couple typo bugs and tidy up some documentation.

	* gtk/layout/api.ignore, gtk/misc/api.ignore, gtk/treeList/api.ignore
	gtk/windows/api.ignore, gtk/abstract/api.ignore: updated with more
	deprecated functions to ignore.

	* tools/apicoverage/gtk.ignore: updated api ignore stuff. Some added,
	some moved elsewhere.

	* tools/apicoverage/Makefile: new target 'summary' to list the number
	of unbound gtk functions, grouped by namespace prefix.

2004-07-30  Duncan Coutts <duncan@coutts.uklinux.net>

	* gtk/entry/Editable.chs, gtk/entry/Entry.chs: split off editable
	functions into separate module and make Entry an instance of the
	EditableClass. Also add missing functions.

	* gtk/entry/SpinButton.chs: make SpinButton an EditableClass instance.

	* tools/hierarchyGen/hierarchy.list: add GtkEditable as an interface.

	* gtk/general/Gtk.hs: export new Editable module.

	* gtk/buttons/Button.chs, gtk/menuComboToolbar/CheckMenuItem.chs,
	gtk/misc/Calendar.chs, gtk/misc/EventBox.chs, gtk/misc/HandleBox.chs
	gtk/entry/HScale, gtk/entry/VScale, gtk/ornaments/Frame.chs,